# med_code

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt  review_app.py
.github/: PAID_LLM_WORKFLOW_POLICY.md  offline-retrieval-dev-trigger
cohortcoder/: mipa_local_inference.py
docs/: BENCHMARKS.md  BSRBR_TRANSFER_PROTOCOL.md  EVALUATION_OUTPUTS.md  EXPERT_FEEDBACK_LOOP.md  EXPLAINABILITY.md  MIPA_LOCAL_PHENOTYPING.md  MODEL_QUALITY_V0013.md  RA_COMORBIDITY_PILOT.md  REAL_BENCHMARK_READINESS.md  REAL_DATA_RUNBOOK.md  RERANKING_PROTOCOL.md  RESULTS_CONTRACT.md  THREE_WAY_DISCORDANCE.md  UNCERTAINTY_AND_TOPK_REVIEW.md  V010_RELEASE.md  V022_RELEASE.md  codiesp_offline_retrieval_v2.md
examples/: bsrbr_style_uncoded.csv  terminology_knowledge_schema.csv
release/: v0.1.0.json  v0.1.1.json  v0.2.2.json
reports/: codiesp_first10_rich_dashboard_v2.html  codiesp_first10_rich_dashboard_v2.payload.b64.part01  codiesp_first10_rich_dashboard_v2.payload.b64.part02  codiesp_first10_rich_dashboard_v2.payload.b64.part03
scripts/: aggregate_codiesp_icd_kb_ab.py  audit_cadec_dataset.py  audit_mimic_dataset.py  build_audit_bundle.py  build_codiesp_rich_dashboard_v2.py  build_review_casebook.py  build_topk_review_packets.py  compare_benchmarks.py  deepseek_candidate_rerank_smoke.py  deepseek_rationale_smoke.py  evaluate_rationale_annotations.py  explain_benchmark.py  explain_mimic_icd10.py  export_codiesp_test_texts.py  generate_mipa_local_predictions.py  medcode.py  predict_explain_uncoded.py  predict_uncoded_public.py  prepare_cadec_public.py  prepare_icd10_terminology.py  prepare_mimic_iv_icd10.py  publish_v011_results.py  rerank_frozen_candidates_deepseek.py  run_cadec_v0012.py  run_cadec_v0013.py  run_candidate_generation_v02.py  run_candidate_generation_v02_batch.py  run_codiesp_direct_deepseek_thinking.py  run_codiesp_direct_deepseek_thinking_v2.py  run_codiesp_direct_flash_50.py  run_demo.py  (+29 more)
(+156 files in other folders)
