[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "med-code"
version = "0.0.19"
description = "Explainable clinical coding with real-data benchmarks, Top-K review, persistent expert workflow, and replayable audit bundles"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "pandas>=2.0", "scipy>=1.10", "scikit-learn>=1.3", "matplotlib>=3.7"]

[project.optional-dependencies]
dev = ["pytest>=7.4"]
models = ["sentence-transformers>=3.0"]
app = ["streamlit>=1.36"]

[tool.pytest.ini_options]
testpaths = ["tests"]
