[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "med-code"
version = "0.3.2"
description = "Evidence-grounded RA comorbidity phenotyping with dual-protocol, subject-aware scientific decision gates"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "pandas>=2.0", "scipy>=1.10", "scikit-learn>=1.3", "matplotlib>=3.7"]

[project.optional-dependencies]
dev = ["pytest>=7.4"]
models = ["sentence-transformers>=3.0"]
app = ["streamlit>=1.36"]

[tool.pytest.ini_options]
testpaths = ["tests"]